--- a/Dom-Pig-Game/style.css
+++ b/Dom-Pig-Game/style.css
@@ -86,7 +86,7 @@ body {
     margin-bottom: 130px;
 }
 
-.active { background-color: #f7f7f7; }
+.active { background-color: lightgrey; }
 .active .player-name { font-weight: 300; }
 
 .active .player-name::after {
