--- a/Dom-Pig-Game/style.css
+++ b/Dom-Pig-Game/style.css
@@ -82,7 +82,7 @@ body {
     text-align: center;
     font-size: 80px;
     font-weight: 100;
-    color: #EB4D4D;
+    color: #lightgreen;
     margin-bottom: 130px;
 }
 
@@ -93,15 +93,15 @@ body {
     content: "\2022";
     font-size: 47px;
     position: absolute;
-    color: #EB4D4D;
+    color: #388116;
     top: -7px;
     right: 10px;
 
 }
 
 .player-current-box {
-    background-color: #EB4D4D;
-    color: #fff;
+    background-color: #388116;
+    color: white;
     width: 40%;
     margin: 0 auto;
     padding: 12px;
@@ -143,7 +143,7 @@ button:focus {
 }
 
 i {
-    color: #EB4D4D;
+    color: #388116;
     display: inline-block;
     margin-right: 15px;
     font-size: 32px;
@@ -167,4 +167,4 @@ i {
 }
 
 .winner { background-color: #f7f7f7; }
-.winner .player-name { font-weight: 300; color: #EB4D4D; }
+.winner .player-name { font-weight: 300; color: #388116; }
