--- a/Dom-Pig-Game/style.css
+++ b/Dom-Pig-Game/style.css
@@ -10,9 +10,10 @@
     padding: 10px;
     width: 160px;
     text-transform: uppercase;
+    border-style: solid;
 }
 
-.final-score:focus { outline: none; }
+.final-score:focus { outline: black; }
 
 #dice-1 { top: 120px; }
 #dice-2 { top: 250px; }
@@ -164,6 +165,7 @@ i {
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+    border-style: solid;
 }
 
 .winner { background-color: #f7f7f7; }
